syntax = "proto3";
//import "google/protobuf/emtpy.proto";
package parser;
option go_package = "shgpu-table/grpc/parser";

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}
service Parser {
  rpc processTable(ProcessTableRequest) returns (ProcessTableResponse) {}
  rpc getGroup(GetGroupRequest) returns (GetGroupResponse) {}
  rpc getFaculties(GetFacultiesRequest) returns (GetFacultiesResponse) {}
  rpc getPairsByDays(GetPairsByDaysRequest) returns (GetPairsResponse) {}
  rpc getPairsByDates(GetPairsByDatesRequest) returns (GetPairsResponse) {}
  rpc getPairsByLectuer(GetPairsByLectuerRequest) returns (GetPairsByLectuerResponse) {}
}

message GetFacultiesRequest {

}

message GetFacultiesResponse {
  repeated Faculty faculties = 1;
}

message Faculty {
  string name = 2;
  int32 id = 1;
}

message Pair {
  string name = 1;
  int32 number = 2;
  int32 day = 3;
  string groupName = 4;
  string date = 5;
}

message GetPairsByDaysRequest {
  string groupName = 1;
  int32 offset = 2;
  int32 count = 3;
}

message GetPairsByDatesRequest {
  string groupName = 1;
  Timestamp dateBegin = 2;
  Timestamp dateEnd = 3;
}

message GetPairsByLectuerRequest {
  string lectuerName = 1;
  Timestamp weekBegin = 2;
  Timestamp weekEnd = 3;
}

message GetPairsResponse {
  Faculty faculty = 1;
  repeated Pair pairs = 2;
}

message GetPairsByLectuerResponse {
  string lectuerName = 2;
  repeated Pair pairs = 3;
}


message GetGroupRequest {
  string groupName = 1;
}

message GetGroupResponse {
  string groupName = 1;
  int32 facultyId = 2;
  string facultyName = 3;
}


message ProcessTableRequest {
  int32 facultyId = 1;
  string tableLink = 2;
}

message ProcessTableResponse {
  int32 facultyId = 1;
  bool isNew = 2;
  bool isUpdated = 3;
  Timestamp weekBegin = 4;
  Timestamp weekEnd = 5;
  string link = 6;
}

message CheckLocalTableModifyDateRequest {
  int32 facultyId = 1;
  string tableName = 2;
}

message CheckLocalTableModifyDateResponse {
 Timestamp modifyDate = 1;
}

message OnNewTableRequest {
  int32 facultyId = 1;
  string tableLink = 2;
  Timestamp weekBegin = 3;
  Timestamp weekEnd = 4;
}

message OnNewTableResponse {

}

message OnModifyTableRequest {

}

message OnModifyTableResponse {
  int32 facultyId = 1;
  string tableLink = 2;
  Timestamp weekBegin = 3;
  Timestamp weekEnd = 4;
}